--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,72 @@
+body, footer{
+    color: #ffffff;
+    background-color: #000000;
+}
 
+* {
+    font-family: "Lucida Grande", Arial, sans-serif;
+}
+
+h1 {
+    font-size: 63px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 30px;
+    text-shadow: 5px 5px 2px #808080;
+}
+
+p {
+    font-size: 24px;
+    padding-top: 20px;
+}
+
+body img{
+    background-position: center;
+    width: 525px;
+    /* What is the one line of code to center? What does margin and display do?*/
+    margin: auto;
+    display: block;
+}
+
+div {
+    min-height: 150px;
+    padding: 25px;
+}
+
+#red {
+    background-color: #ff0000;
+    text-align: right;
+}
+
+#blue {
+    background-color: #0000ff;
+    text-align: left;
+}
+
+#yellow {
+    background-color: #ffff00;
+    text-align: right;
+}
+
+#yellow h2 {
+    color: #000000;
+    text-shadow: 5px 5px 2px #c7e2c7;
+}
+
+#yellow p {
+    color: #000000;
+}
+#green {
+    background-color: #008000;
+    text-align: left;
+}
+
+footer p {
+    text-align: right;
+    padding-top: 0px;
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 10px;
+}
