--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@ body, footer{
 }
 
 * {
-    font-family: "Lucida Grande", Arial, sans-serif;
+    font-family: "Lucida Grande", sans-serif;
 }
 
 h1 {
-    font-size: 63px;
+    font-size: 64px;
     text-align: center;
 }
 
